# iradio

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults
components/ESP32-audioI2S/: CMakeLists.txt
components/ESP32-audioI2S/src/: Audio.h
main/: CMakeLists.txt  config template.cpp  config.h  idf_component.yml  main.cpp  main_disp_test.cpp  my_font_16.c  stations.h
main/drivers/audio/: audio_manager.cpp  audio_manager.h  audio_types.h
main/drivers/display/: display_driver.cpp  display_driver.h
main/drivers/encoder/: encoder.cpp  encoder.h
main/drivers/nvs/: nvs_manager.cpp  nvs_manager.h
main/fonts/: bebas_neue_24.c  fonts.cpp  fonts.h  inter_medium_14.c  inter_medium_18.c  oswald_sb_24.c  roboto_mono_12.c  roboto_mono_14.c
main/messages/: audio_messages.h  audio_to_ui_messages.h
main/station/: stations.cpp  stations.h
main/tasks/: audio_task.cpp  audio_task.h  ui_task.cpp  ui_task.h
main/ui/: iaudio_event_handler.h  iencoder_event_handler.h  root_screen.cpp  root_screen.h  screen_manager.cpp  screen_manager.h
main/ui/screens/: eq_screen.cpp  eq_screen.h  screen.cpp  screen.h  screen_with_handlers.cpp  screen_with_handlers.h  station_screen.cpp  station_screen.h  volume_screen.cpp  volume_screen.h
main/ui/status_bars/: bottom_bar.cpp  bottom_bar.h  top_bar.cpp  top_bar.h
