idf_component_register(
    SRCS 
        main.cpp
        config.cpp
        tasks/audio_task.cpp
        tasks/ui_task.cpp
        station/stations.cpp
        drivers/encoder/encoder.cpp
        drivers/audio/audio_manager.cpp
        drivers/display/display_driver.cpp
        drivers/nvs/nvs_manager.cpp
        ui/screen_manager.cpp
        ui/root_screen.cpp
        ui/screens/screen_with_handlers.cpp
        ui/screens/volume_screen.cpp
        ui/screens/eq_screen.cpp
        ui/screens/station_screen.cpp
        ui/status_bars/top_bar.cpp
        ui/status_bars/bottom_bar.cpp
        fonts/fonts.cpp
        fonts/inter_medium_14.c
        fonts/inter_medium_18.c
        fonts/roboto_mono_12.c
        fonts/roboto_mono_14.c
        fonts/oswald_sb_24.c
    INCLUDE_DIRS 
        "."
        "tasks"
        "messages"
        "drivers/encoder"
        "drivers/audio"
        "drivers/display"
        "drivers/nvs"
        "ui"
        "ui/screens"
        "fonts"
    REQUIRES 
        Arduino 
        mbedtls 
        esp-tls 
        esp-dsp 
        wear_levelling 
        freertos
        esp_lcd
        driver 
        lvgl
        nvs_flash
        sdmmc
        fatfs
        spi_flash
)

target_include_directories(${COMPONENT_TARGET} PRIVATE
    ../components/ESP32-audioI2S/src

)

target_compile_options(${COMPONENT_TARGET} PRIVATE 
    -Wno-format 
    -Wno-error=format 
    -Wno-unused-variable
    -Wno-reorder
    -fpermissive
)
